@@ -1,6 +1,13 @@
 # ChangeLog for sys-kernel/genkernel
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*genkernel-999999 (26 Mar 2011)
+
+  26 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  -genkernel-9999.ebuild, +genkernel-999999.ebuild:
+  Changed version from 9999 to 999999, because of collision with Portage live
+  ebuilds.
 
   16 Aug 2010; Amadeusz Żołnowski <aidecoe@aidecoe.name> genkernel-9999.ebuild:
   Minor QA fix.
